--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -52,3 +52,8 @@ spring.redis.lettuce.pool.max-wait=-1
 spring.redis.lettuce.pool.max-idle=8
 spring.redis.lettuce.pool.min-idle=0
 #################rabbitMq配置#################
+
+xin.yi.user.id=${XIN_YI_USER_ID:14}
+wei.ge.user.id=${WEI_GE_USER_ID:15}
+#保价到期提前提醒天数
+price.expire.remind=${PRICE_EXPIRE_REMIND:30}
