--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -37,7 +37,7 @@ spring.redis.lettuce.pool.max-idle=8
 spring.redis.lettuce.pool.min-idle=0
 #################rabbitMq配置#################
 
-
-save_file_path=/data/pdsfile/
-voice.download.url=http://localhost:20002/file/download/
-
+xin.yi.user.id=14
+wei.ge.user.id=15
+#保价到期提前提醒天数
+price.expire.remind=30
