保价到期提醒及重新询价

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -41,6 +41,7 @@ xin.yi.user.id=14
 wei.ge.user.id=15
 #保价到期提前提醒天数
 price.expire.remind=30
+price.expire.remind.roles=7
 
 
 save_file_path=/data/upload/
