--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -57,5 +57,6 @@ xin.yi.user.id=${XIN_YI_USER_ID:14}
 wei.ge.user.id=${WEI_GE_USER_ID:15}
 #保价到期提前提醒天数
 price.expire.remind=${PRICE_EXPIRE_REMIND:30}
+price.expire.remind.roles=${PRICE_EXPIRE_REMIND_ROLES:7}
 
 save_file_path=${SAVE_FILE_PATH:}
