多余配置清理

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -34,18 +34,10 @@ management.security.enabled=false
 #security.oauth2.client.authentication-scheme=header
 #################redis基础配置#################
 spring.redis.database=0
-spring.redis.hostName=${REDIS_HOST:localhost}
+spring.redis.host=${REDIS_HOST:localhost}
 spring.redis.port=${REDIS_PORT:6379}
 spring.redis.password=${REDIS_PWD:}
-spring.redis.two.database=1
-spring.redis.two.hostName=${REDIS_HOST:localhost}
-spring.redis.two.port=${REDIS_PORT:6379}
-spring.redis.two.password=${REDIS_PWD:}
-spring.redis.three.database=2
-spring.redis.three.hostName=${REDIS_HOST:localhost}
-spring.redis.three.port=${REDIS_PORT:6379}
-spring.redis.three.password=${REDIS_PWD:}
-spring.redis.timeout=5000
+spring.redis.timeout=0
 
 spring.redis.lettuce.pool.max-active=800
 spring.redis.lettuce.pool.max-wait=-1
