--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -18,18 +18,10 @@ spring.datasource.druid.maxActive=100
 #spring.redis.cluster.nodes=192.168.0.187:8001,192.168.0.187:8002,192.168.0.187:8003,192.168.0.187:8004,192.168.0.187:8005,192.168.0.187:8006
 #spring.redis.cluster.max-redirects=8
 spring.redis.database=0
-spring.redis.hostName=192.168.0.187
+spring.redis.host=192.168.0.187
 spring.redis.port=6379
 spring.redis.password=123456
-spring.redis.two.database=1
-spring.redis.two.hostName=192.168.0.187
-spring.redis.two.port=6379
-spring.redis.two.password=123456
-spring.redis.three.database=2
-spring.redis.three.hostName=192.168.0.187
-spring.redis.three.port=6379
-spring.redis.three.password=123456
-spring.redis.timeout=5000
+spring.redis.timeout=0
 
 spring.redis.lettuce.pool.max-active=800
 spring.redis.lettuce.pool.max-wait=-1
