--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,7 @@ management.metrics.export.prometheus.enabled=true
 management.endpoints.web.exposure.include=*
 management.endpoints.web.base-path=/
 management.health.defaults.enabled=false
-mybatis-plus.mapper-locations=classpath:/mappers/**/*Mapper.xml
+mybatis-plus.mapper-locations=classpath:mapper/*Mapper.xml
 mybatis-plus.type-aliases-package=cn.weihu.**.db.po
 spring.redis.lettuce.pool.max-idle=8
 spring.redis.lettuce.pool.min-idle=0
