--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -35,5 +35,6 @@ wei.ge.user.id=15
 price.expire.remind=30
 price.expire.remind.roles=7
 
+check.price.cron=0 0 0 * * ?
 
 save_file_path=/data/upload/
