--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -51,4 +51,6 @@ wei.ge.user.id=${WEI_GE_USER_ID:15}
 price.expire.remind=${PRICE_EXPIRE_REMIND:30}
 price.expire.remind.roles=${PRICE_EXPIRE_REMIND_ROLES:7}
 
+check.price.cron=${CHECK_PRICE_CRON:0 0 0 * * ?}
+
 save_file_path=${SAVE_FILE_PATH:}
