已下单导出

--- a/pom.xml
+++ b/pom.xml
@@ -281,6 +281,13 @@
                 </includes>
             </resource>
             <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+                <includes>
+                    <include>**/*.xlsx</include>
+                </includes>
+            </resource>
+            <resource>
                 <directory>src/main/docker</directory>
                 <includes>
                     <include>Dockerfile</include>
