--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -7,7 +7,7 @@ logging.config=classpath:spring-logback-local.xml
 ######################  数据库基础配置   #############################
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-spring.datasource.url=jdbc:p6spy:mysql://192.168.0.187:3306/kol?useUnicode=true&characterEncoding=UTF-8&serverTimezone=CTT
+spring.datasource.url=jdbc:p6spy:mysql://192.168.0.187:3306/kol?useUnicode=true&characterEncoding=UTF-8&serverTimezone=CTT&rewriteBatchedStatements=true
 spring.datasource.username=root
 spring.datasource.password=123456
 # 初始化连接池大小
